--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "canvas": "^2.11.2",
+    "chart.js": "^4.3.2",
+    "chartjs-plugin-annotation": "^3.0.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
